objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Seller_Payment_Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller Payment Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_Payment_Sent_On__c</fullName>
        <label>Seller Payment Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seller_Payment_Tracking_Number__c</fullName>
        <label>Seller Payment Tracking Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller Survey</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shift_Survey__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Seller</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shift_Survey__c</referenceTo>
        <relationshipLabel>Seller Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_Upside_Percentage__c</fullName>
        <label>Seller Upside Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_Costs_Repairs__c</fullName>
        <label>Shift Costs Repairs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Smog_Check_On__c</fullName>
        <formula>Vehicle_ID__r.Smog_Check_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Smog Check On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Request__c</fullName>
        <label>Special Request</label>
        <picklist>
            <picklistValues>
                <fullName>Buyer Requests New Plates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer Needs To Send Old Plates to Seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Mail Registration - CE To Deliver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overnight Registration When Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return Policy Voided - Register ASAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apply For Duplicate Title</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apply For New Registration Sticker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renew Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return License Plates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return OBD2 Device</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Specific_Car_Search_Fee__c</fullName>
        <label>Specific Car Search Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specific_Car_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specific Car Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_Status__c</fullName>
        <label>Stage Status (Old)</label>
        <picklist>
            <picklistValues>
                <fullName>Quote submitted with bad email and no estimate sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote requires manual pricing and not yet sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote requires more information on car and not yet sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote not sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost DQ: Not accepting leased car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost DQ: Not accepting service area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost DQ: Not accepting car criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost DQ: Not accepting mileage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost DQ: Not accepting title issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost DQ: Not accepting for other VHR reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost DQ: Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost DQ: Customer unreachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach 1 (email): No response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach 2 (email + phone): Left VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach 2 (email): No response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach 3 (email): No response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing: Responded with pricing too low to engage further</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing: Responded with higher dealer offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing: Responded with higher private party offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing: Responded with ability to get more on their own</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing: Responded with concern being addressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded with no longer in the market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded with might be selling in the future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded with only selling in a few months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded with checking price on a previous purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded with offer too low to afford selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded with cannot afford to cover upside down loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded with interest and evaluation being scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded with interest and evaluation being scheduled but cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded with questions related to service being addressed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tesla_Customer_Quote_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tesla Customer Quote Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tesla_Delivery_Expected_At__c</fullName>
        <label>Tesla Delivery Expected At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tesla_Location__c</fullName>
        <label>Tesla Location</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Street Promenade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annapolis - Annapolis Mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bethesda - Montgomery Mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brea Mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buena Park Service Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burbank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlingame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Century City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corte Madera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Mesa Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin - Amador Plaza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fremont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles - Centinela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McLean - Tysons Corner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission Viejo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monterey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palm Desert - The Gardens on El Paseo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palm Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palo Alto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palo Alto - Stanford Shopping Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasadena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portland - Tigard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portland - Washington Square</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rocklin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rockville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sacramento - Rocklin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego - Fashion Valley</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tesla_Payee__c</fullName>
        <label>Tesla Payee</label>
        <picklist>
            <picklistValues>
                <fullName>Seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tesla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Received_On__c</fullName>
        <label>Title Received On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Shift_Costs__c</fullName>
        <label>Total Shift Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_In_Credit_Amount__c</fullName>
        <label>Trade-In Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_In_Status__c</fullName>
        <inlineHelpText>Requested: trade needs pricing
Estimated: est. quote sent
Approved: price finalized; contract signed
Funded: credit applied to purchase (need team ld. approval)
Closed: return period elapsed--final settlement complete
Expired: buyer elects not to buy</inlineHelpText>
        <label>Trade-In Status</label>
        <picklist>
            <picklistValues>
                <fullName>Estimated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trade_In_Tier__c</fullName>
        <label>Trade-In Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trade_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UTM_Campaign__c</fullName>
        <label>UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Content__c</fullName>
        <label>UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Medium__c</fullName>
        <label>UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Source_Lead_Score_Input__c</fullName>
        <formula>(0.613286449*(CASE(Referrer_Analytics_ID__r.UTM_Source__c, &quot;bingsearch&quot;, 1, 0))) 
+ 
(-1.158518106*(CASE(Referrer_Analytics_ID__r.UTM_Source__c, &quot;facebook&quot;, 1, 0))) 
+ 
(0.330814062*(Case(Referrer_Analytics_ID__r.UTM_Source__c, &quot;ggbrand&quot;, 1, 0))) 
+ 
(-0.093229893*(Case(Referrer_Analytics_ID__r.UTM_Source__c, &quot;ggsearch&quot;, 1, 0))) 
+ 
(-2.53264045*(Case(Referrer_Analytics_ID__r.UTM_Source__c,&apos;&apos;, 0, &apos;bingsearch&apos;, 0, &apos;facebook&apos;, 0, &apos;ggbrand&apos;, 0, &apos;ggsearch&apos;, 0, 1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UTM Source Lead Score Input</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UTM_Source__c</fullName>
        <label>UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Term__c</fullName>
        <label>UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VHR_Included_In_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VHR Included In Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIN_Inquiry__c</fullName>
        <label>VIN Inquiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <formula>Vehicle_ID__r.VIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Condition__c</fullName>
        <formula>TEXT(Vehicle_ID__r.Condition__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Detail_URL__c</fullName>
        <formula>Vehicle_ID__r.Detail_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Detail URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year_Lead_Score_Input__c</fullName>
        <formula>(-0.263287327*(CASE(Vehicle_ID__r.Year__c , 2001, 1, 0))) 
+ 
(-0.635028391*(CASE(Vehicle_ID__r.Year__c , 2002, 1, 0))) 
+ 
(-0.216675381*(CASE(Vehicle_ID__r.Year__c , 2003, 1, 0))) 
+ 
(0.044642134*(CASE(Vehicle_ID__r.Year__c , 2004, 1, 0))) 
+ 
(-0.026703316*(CASE(Vehicle_ID__r.Year__c , 2005, 1, 0))) 
+ 
(0.295142273*(CASE(Vehicle_ID__r.Year__c , 2006, 1, 0))) 
+ 
(0.293838596*(CASE(Vehicle_ID__r.Year__c , 2007, 1, 0))) 
+ 
(0.55001928*(CASE(Vehicle_ID__r.Year__c , 2008, 1, 0))) 
+ 
(0.552001547*(CASE(Vehicle_ID__r.Year__c , 2009, 1, 0))) 
+ 
(0.265753096*(CASE(Vehicle_ID__r.Year__c , 2010, 1, 0))) 
+ 
(0.287157605*(CASE(Vehicle_ID__r.Year__c , 2011, 1, 0))) 
+ 
(-0.04822852*(CASE(Vehicle_ID__r.Year__c , 2012, 1, 0))) 
+ 
(-0.427612951*(CASE(Vehicle_ID__r.Year__c , 2014, 1, 0))) 
+ 
(-0.841701684*(CASE(Vehicle_ID__r.Year__c , 2015, 1, 0))) 
+ 
(-2.70461119*(CASE(Vehicle_ID__r.Year__c , 2016, 1, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Year Lead Score Input</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volume Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Was_Paid_On_Contract_Expiration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Paid On Contract Expiration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_Was_The_Main_Use_Of_This_Car__c</fullName>
        <label>What Was The Main Use Of This Car</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Why_Are_You_Selling_This_Car__c</fullName>
        <label>Why Are You Selling This Car</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Vehicle_ID__r.Display_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Inbound_Deals_Eval_Pickup</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Vehicle_ID__c</columns>
        <columns>Region_ID__c</columns>
        <columns>Vehicle_Detail_URL__c</columns>
        <columns>VHR_Included_In_Pricing__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Evaluate and Pickup</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>driveshift.com,Oodle/Facebook,Seller App,Word of Mouth</value>
        </filters>
        <label>Inbound Deals + Eval/Pickup</label>
        <sharedTo>
            <group>CC_Sacramento</group>
            <group>ISR_Inbound</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inbound_Deals_Los_Angeles</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Vehicle_ID__c</columns>
        <columns>Region_ID__c</columns>
        <columns>Vehicle_Detail_URL__c</columns>
        <columns>VHR_Included_In_Pricing__c</columns>
        <columns>UTM_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Quote and Schedule</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>driveshift.com</value>
        </filters>
        <filters>
            <field>Region_ID__c</field>
            <operation>equals</operation>
            <value>Los Angeles</value>
        </filters>
        <label>Inbound Deals + Los Angeles</label>
        <sharedTo>
            <group>ISR_Inbound</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inbound_Deals_SD_Uber</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Vehicle_ID__c</columns>
        <columns>Region_ID__c</columns>
        <columns>Vehicle_Detail_URL__c</columns>
        <columns>VHR_Included_In_Pricing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Quote and Schedule</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>driveshift.com</value>
        </filters>
        <filters>
            <field>Region_ID__c</field>
            <operation>equals</operation>
            <value>San Diego</value>
        </filters>
        <filters>
            <field>Referral_Program_Or_Promotion__c</field>
            <operation>equals</operation>
            <value>UberDriversSocal2016</value>
        </filters>
        <label>Inbound Deals + SD + Uber</label>
        <sharedTo>
            <group>ISR_Inbound</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inbound_Deals_Sacramento</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Vehicle_ID__c</columns>
        <columns>Region_ID__c</columns>
        <columns>Vehicle_Detail_URL__c</columns>
        <columns>VHR_Included_In_Pricing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Quote and Schedule</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>driveshift.com,Oodle/Facebook,Seller App,Word of Mouth</value>
        </filters>
        <filters>
            <field>Region_ID__c</field>
            <operation>equals</operation>
            <value>Sacramento</value>
        </filters>
        <label>Inbound Deals + Sacramento</label>
        <sharedTo>
            <group>CC_Sacramento</group>
            <group>ISR_Inbound</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inbound_Deals_San_Diego</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Vehicle_ID__c</columns>
        <columns>Region_ID__c</columns>
        <columns>Vehicle_Detail_URL__c</columns>
        <columns>VHR_Included_In_Pricing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Quote and Schedule</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>driveshift.com</value>
        </filters>
        <filters>
            <field>Region_ID__c</field>
            <operation>equals</operation>
            <value>San Diego</value>
        </filters>
        <label>Inbound Deals + San Diego</label>
        <sharedTo>
            <group>ISR_Inbound</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inbound_Deals_San_Francisco</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Vehicle_ID__c</columns>
        <columns>Region_ID__c</columns>
        <columns>Vehicle_Detail_URL__c</columns>
        <columns>VHR_Included_In_Pricing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Quote and Schedule</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>driveshift.com,Oodle/Facebook,Seller App,Word of Mouth</value>
        </filters>
        <filters>
            <field>Region_ID__c</field>
            <operation>equals</operation>
            <value>San Francisco</value>
        </filters>
        <label>Inbound Deals + San Francisco</label>
        <sharedTo>
            <group>CC_Sacramento</group>
            <group>ISR_Inbound</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inbound_Deals_Washington_D_C</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Vehicle_ID__c</columns>
        <columns>Region_ID__c</columns>
        <columns>Vehicle_Detail_URL__c</columns>
        <columns>VHR_Included_In_Pricing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Quote and Schedule</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>driveshift.com,Oodle/Facebook,Seller App,Word of Mouth</value>
        </filters>
        <filters>
            <field>Region_ID__c</field>
            <operation>contains</operation>
            <value>Washington</value>
        </filters>
        <label>Inbound Deals + Washington D.C.</label>
        <sharedTo>
            <group>CC_Sacramento</group>
            <group>ISR_Inbound</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LA_Leases</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lost_Reason__c</field>
            <operation>equals</operation>
            <value>DQ - Lease</value>
        </filters>
        <filters>
            <field>Region_ID__c</field>
            <operation>equals</operation>
            <value>Los Angeles</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>driveshift.com,Word of Mouth</value>
        </filters>
        <label>LA Leases - Inbound</label>
    </listViews>
    <listViews>
        <fullName>My_Buyer_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Buyer</value>
        </filters>
        <label>My Buyer Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Opp_Evaluate_and_Pickup</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Entered_Stage_Evaluate_And_Pickup__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Seller</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Evaluate and Pickup</value>
        </filters>
        <label>My Opp 03 - Evaluate and Pickup</label>
    </listViews>
    <listViews>
        <fullName>My_Opp_Handover</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Entered_Stage_Handover__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Seller</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Handover</value>
        </filters>
        <label>My Opp 06 - Handover</label>
    </listViews>
    <listViews>
        <fullName>My_Opp_Leads</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Entered_Stage_Leads__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Seller</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Leads</value>
        </filters>
        <label>My Opp 01 - Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Opp_Prepare_Car_for_Sale</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Entered_Stage_Prepare_Car_For_Sale__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Seller</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Prepare Car for Sale</value>
        </filters>
        <label>My Opp 04 - Prepare Car for Sale</label>
    </listViews>
    <listViews>
        <fullName>My_Opp_Sell_Car</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Entered_Stage_Sell_Car__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Seller</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Sell Car</value>
        </filters>
        <label>My Opp 05 - Sell Car</label>
    </listViews>
    <listViews>
        <fullName>My_Opp_Sold</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Entered_Stage_Sold__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Seller</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Sold</value>
        </filters>
        <label>My Opp 07 - Sold</label>
    </listViews>
    <recordTypes>
        <fullName>Buyer</fullName>
        <active>true</active>
        <businessProcess>Buyer</businessProcess>
        <label>Buyer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Seller</fullName>
        <active>true</active>
        <businessProcess>Seller</businessProcess>
        <label>Seller</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Block_Returns</fullName>
        <active>false</active>
        <errorConditionFormula>AND((ISPICKVAL(StageName, &apos;Sell Car&apos;)),(ISPICKVAL( Lost_Reason__c , &apos;Return Period Expired&apos;)))</errorConditionFormula>
        <errorMessage>Return period is expired. Vehicle can no longer be returned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Seller_Vehicle</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName == &apos;Seller&apos;, ISBLANK(Vehicle_ID__c))</errorConditionFormula>
        <errorDisplayField>Vehicle_ID__c</errorDisplayField>
        <errorMessage>Seller Opportunities must have a Vehicle</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Stage_Movement_To_Sold</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISCHANGED(StageName),
    TEXT(StageName) = &quot;Sold&quot;,
    $Profile.Name &lt;&gt; &quot;Document Operations&quot;,
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Only DocOps can progress a deal to the Sold stage.</errorMessage>
    </validationRules>
</CustomObject>